<resources>
    <string name="app_name">easyLearning</string>
    <string name="title_activity_navegacao">NavegacaoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="destaques">Destaques</string>
    <string name="meus_cursos">Meus Cursos</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="mensagens">Mensagens</string>
    <string name="meu_canal">Meu Canal</string>
    <string name="preferencias">Preferências</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_a">aActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_editar_perfil">Editar perfil</string>
    <string name="menu_meu_canal">Meu canal</string>
    <string name="menu_notidicacoes">Notificações</string>
    <string name="menu_compartilhar">Compartilhar easyCash</string>
    <string name="menu_sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
